--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -2,16 +2,22 @@
 
 body {margin: 1rem; }
 p {margin-bottom: 1rem;}
-h1, h2, h3, h4, h5, h6, header p, nav li a { text-transform: uppercase;}
+h1, h2, h3, h4, h5, h6, header p, nav li a {
+    text-transform: uppercase;
+    font-family: 'Futura Light', Futura, 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+header h1, header p {color: rgb(59,58,63);}
+header h1 { font-size: 2rem;}
 
-header section { background-color: rgb(194,222,93); padding: 1rem 1rem 3rem 1rem;}
-header p { margin: 0;}
+header section { background-color: rgb(194,222,93); padding: 1.7rem 1rem 3.5rem 1rem;}
+header p { margin: 0; font-size: 1.2rem;}
 
 nav ul {list-style: none; padding: 0; margin: 0;}
 
 nav a {text-decoration: none; }
 
-header nav li {display: inline-block; padding: .5rem 2.1rem;}
+header nav li {display: inline-block; padding: .5rem 2.1rem; font-size: 1.1rem;}
 header nav a { color: black;}
 
 /*#main {min-height: 30rem; display: flex; }*/
@@ -25,27 +31,23 @@ header nav a { color: black;}
     flex-direction: row;
 }
 
-#main #side {float: left; width: 30%; background-color: yellow; }
+#main #side {float: left; width: 25%; }
 
 
 #main #side {
-    /*-webkit-box-flex: 1;      *//* OLD - iOS 6-, Safari 3.1-6 */
-    /*-moz-box-flex: 1;         *//* OLD - Firefox 19- */
-    /*height: 20%;               *//* For old syntax, otherwise collapses. */
-    /*-webkit-flex: 1;          *//* Chrome */
-    /*-ms-flex: 1;              *//* IE 10 */
-    /*flex: 1;                  *//* NEW, Spec - Opera 12.1, Firefox 20+ */
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
+    -webkit-flex-direction: column;
 }
 
-#main #content {float: left; max-width: 70%; }
+#main #content {float: left; max-width: 75%; }
 /*#main {overflow: auto;}*/
 
 #main nav, #main aside { margin-right: 1rem; }
 #main aside { flex: 1; }
 
-#main nav, #main aside {
+#main aside {
     -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
     -moz-box-flex: 1;         /* OLD - Firefox 19- */
     height: 20%;               /* For old syntax, otherwise collapses. */
@@ -55,16 +57,30 @@ header nav a { color: black;}
 }
 #main nav {background-color: rgb(93,223,221); }
 #main aside {background-color: rgb(93,193,223); margin-top: 1rem; }
-#side nav ul {margin-top: 0; margin-bottom: 3rem;}
-#side nav li, #side nav a { color: white; text-align: left; padding: .5rem; margin-left: 2rem; }
-#side nav li:first-of-type {padding-top: 3rem;}
+#side nav ul {padding-top: 3rem; padding-bottom: 2rem; padding-left: 2rem;}
+#side nav li, #side nav a { color: white; text-align: left; padding: .5rem; }
 
-#main #content h2 {background-color: rgb(224,216,94); color: white; padding: 1rem 1rem 1rem 3rem; margin-bottom: 3rem;}
-#main #content p { margin-left: 3rem; margin-right: 2rem;}
+#main #content h2 {
+    background-color: rgb(224,216,94);
+    color: white;
+    padding: 1rem 1rem 1rem 3rem;
+    margin-bottom: 3rem;
+    font-size: 1.7rem;
+}
+#main #content p { margin-left: 3rem; margin-right: 5rem;}
 
 #main #content article { flex: 1;}
 
-#main #content footer, footer { background-color: rgb(176,178,179); position: relative; bottom: 0px; margin-top: 3rem;}
+#main #content footer {
+    background-color: rgb(176,178,179);
+    color: rgb(58,58,58);
+    position: relative; bottom: 0px;
+    margin-top: 3rem;
+    text-align: right;
+    padding: .2rem 1rem .2rem;
+    font-size: 50%;
+}
+#main #content footer i.fa-inverse {color: rgb(176,178,179); }
 
 /* this makes me want to cry */
 /**
