--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -20,6 +20,7 @@ nav a {text-decoration: none; }
 header nav li {display: inline-block; padding: .5rem 2.1rem; font-size: 1.1rem;}
 header nav a { color: black;}
 
+a:hover {text-decoration: underline;}
 
 #main {
     display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
@@ -81,4 +82,20 @@ header nav a { color: black;}
     font-size: 50%;
 }
 #main #content footer i.fa-inverse {color: rgb(176,178,179); }
+
+.offscreen {
+position:absolute;
+left:-10000px;
+top:auto;
+width:1px;
+height:1px;
+overflow:hidden;
+}
+
+.offscreen:focus {
+  position: static;
+  width: auto;
+  height: auto;
+  color:red;
+}
 
